syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.lesniewicz.api";

message LanguageRequest{
  string languageId = 1;
}

message LanguagesRequest{
  string name = 1;
  string lastUpdate = 2;
}

message LanguagesResponse {
  repeated SingleLanguageResponse languages = 1;
}

message SingleLanguageResponse {
  int64 languageId = 1;
  string name = 2;
  string lastUpdate = 3;
}

service LanguageGrpcService {
  rpc getLanguage(LanguageRequest) returns (SingleLanguageResponse) {};
  rpc getLanguages(LanguagesRequest) returns (LanguagesResponse) {};
}